--- a/app/Resources/views/find/checkout.html.twig
+++ b/app/Resources/views/find/checkout.html.twig
@@ -67,6 +67,9 @@
                             <li>
                                 Type : {{offre.type.nom}}
                             </li>
+                            <li>
+                                Distance : <span id='distance'></span> Km
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -172,6 +175,7 @@
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key={{token_google}}"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/js-marker-clusterer/1.0.0/markerclusterer_compiled.js"></script>
+    <script src="{{asset('js/map.js')}}"></script>
     <script type="text/javascript">
         var map;
 
@@ -186,13 +190,21 @@
             var mark = marker(map, "{{offre.adresse.latitude}}", "{{offre.adresse.longitude}}", "{{offre.id}}", "{{offre.titre}}", "{{asset(offre.type.marker)}}");
             markers.push(mark);
             var markerCluster = new MarkerClusterer(map, markers, {imagePath: '{{asset('img/m')}}'});
+
+            navigator.geolocation.getCurrentPosition(function (position) {
+                var current_pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+                var arr = new google.maps.LatLng({{offre.adresse.latitude}}, {{offre.adresse.longitude}});
+
+                $('#distance').empty();
+                $('#distance').append(getDistance(current_pos, arr));
+            });
         }
 
         function marker(map, lat, lng, offre_id, msg, icon) {
             var position = new google.maps.LatLng(lat, lng);
             var marker = new google.maps.Marker({
                 position: position,
-                draggable: true,
+                draggable: false,
                 title: "info",
                 icon: {
                     url: icon, // url
