--- a/app/Resources/views/static/footer.html.twig
+++ b/app/Resources/views/static/footer.html.twig
@@ -3,6 +3,6 @@
         {{"now"|date('d/m/Y h:i')}}
     </div>
     <div>
-        <strong>Copyright</strong> Handball Club du Pays de Sillé &copy; 2017
+        <strong>Copyright</strong> Thomas Berthé &copy; 2018
     </div>
 </div>
